amiq/css/style.css
html {
    margin: 0;
    padding: 0;
    overflow: hidden;
}

body {
    margin: 0;
    padding: 0;
    padding-top: 3.75em;
    color: #333;
    height: 100vh;
    overflow: auto;
    /*font-family: 'Heiti TC', 'Microsoft JhengHei', Sans-Serif;*/
    font-family: 'Roboto','RobotoDraft','Heiti TC','Microsoft JhengHei',Helvetica,Arial,sans-serif;
    overflow-x: hidden;
/*    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;*/
}

a {
    cursor: pointer;
    -webkit-tap-highlight-color: transparent;
}

p {
    line-height: 2;
    text-align: justify;
}

hr {
    height: 0;
    border: 0;
    border-bottom: 3px solid #eee;
}

.hide {
    display: none;
}

.header {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 90;
    background-color: #fff;
    color: #868e96;
    -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .15);
    box-shadow: 0 0 5px rgba(0, 0, 0, .15);
}

.header .link {
    display: block;
    float: left;
    padding: 1.25em 1em;
    font-weight: bold;
    color: #ced4da;
    cursor: pointer;
    -webkit-transition: .5s all;
    -o-transition: .5s all;
    transition: .5s all;
}
.header .link:active {
    background-color: #f1f3f5;
}
.header .link:hover,
.header .link.active  {
    color: #c30;
}

.indicator-bar {
    position: absolute;
    top: 3.5em;
    left: 0;
    right: 0;
    z-index: 99999;
    height: .35em;
    background-color: #e9ecef;
}
.indicator {
    position: absolute;
    top: 3.5em;
    /*left: 12.75em;*/
    z-index: 99999;
    height: .35em;
    /*width: 4em;*/
    background-color: #c30;
    -webkit-transition: .75s all;
    -o-transition: .75s all;
    transition: .75s all;
}  
.indicator.home {
    left: 0;
    width: 8.75em;
}
.indicator.rent {
    left: 8.75em;
    width: 4em;
} 
.indicator.catalog {
    left: 12.75em;
    width: 4em;
} 

/*.site-title {
    display: block;
    float: left;
    padding: 1.25em;
}

.site-logo {
    height: .9em;
}
*/
.list-type-menu {
    position: fixed;
    top: 0;
    right: 0;
    z-index: 9999;
}

.list-type-menu a {
    display: inline-block;
    padding: 1.2em 1em;
    color: #868e96;
    cursor: pointer;
    -webkit-transition: .5s all;
    -o-transition: .5s all;
    transition: .5s all;
}

.list-type-menu a:active {
    opacity: .75;
    background-color: #fff9db;
}

.list-type-menu i {
    font-size: 1.5em;
    vertical-align: middle;
}


.banner {
    position: relative;
    width: 100%;
    height: calc(100vw / 16 * 9);
    overflow: hidden;
    
/*    background: url(../img/amiq_banner.jpg) 50% 33% no-repeat;
    color: #fff;
    -webkit-background-size: 100% auto;
    background-size: 1)0% auto;
    overflow: hidden;*/
}
.banner:before {
    content: "";
    position: absolute;
    top: -25%;
    bottom: 0;
    left: -25%;
    right: 0;
    width: 160%;
    height: calc(100vw / 16 * 9 * 1.6);
    background: url(../img/amiq_banner.jpg) 50% 33% no-repeat;
    -webkit-background-size: 100% auto;
    background-size: 100% auto;

    -webkit-transform: rotate(-15deg);
    -ms-transform: rotate(-15deg);
    -o-transform: rotate(-15deg);
    transform: rotate(-15deg);
}

@media screen (max-width: 48px) {
    .banner:before {
        background: url(../img/amiq_banner_s.jpg) 50% 33% no-repeat;
    }
}

.banner:after {
    content: "";
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    /*height: calc(100vw / 16 * 9 );*/
    background-color: rgba(40,32,0,.65);
    mix-blend-mode: darken;
}

.slogan {
    position: absolute;
    top: 50%;
    left: 50%;
    z-index: 1;
    width: auto;    
    text-align: center;
    color: #fff;
    text-shadow: 
        1px 1px 0 rgba(204,51,0,.5),
        -1px -1px 0 rgba(204,51,0,.5),
        1px -1px 0 rgba(204,51,0,.5),
        -1px 1px 0 rgba(204,51,0,.5)
        ;
    -webkit-transform: translate(-50%,-50%);
    -ms-transform: translate(-50%,-50%);
    -o-transform: translate(-50%,-50%);
    transform: translate(-50%,-50%);   
}
@media screen and (min-width: 1024px) {
    .slogan {
        font-size: 1.25em;
    }
    .slogan h1 {
        font-size: 3em;
    }
}
@media screen and (max-width: 720px) {
    wbr {
        display: block;
    }
}
@media screen and (max-width: 480px) {
    .slogan h1 {
        font-size: 3em;
    }
    .slogan h2 {
        font-size: 1rem;
        font-weight: normal;
    }
    .slogan {
        width: 100%;
    }
}
}
@media screen and (orientation: landscape) {
    .banner {
        height: calc(100vw / 16 * 9);
    }
    .banner:before {
/*        top: -25%;
        left: -25%;
        width: 160%;
        height: calc(100vw / 16 * 9 * 1.6);
        -webkit-background-size: 100% auto;
        background-size: 100% auto;*/
    }
    .banner:after {
        height: calc(100vw / 16 * 9 );
    }
}
@media screen and (orientation: portrait) {
    .banner {
        height: calc(100vh - 48px);
    }
    .banner:before {
        top: -40%;
        left: -47%;
        width: 400%;
        height: calc(100vw / 9 * 16 * 1.4);
        background: url(../img/amiq_banner.jpg) 50% 33% no-repeat;
        -webkit-background-size: auto 100%;
        background-size: auto 100%;
    }
    .banner:after {
        height: calc(100vw / 9 * 16 );
    }
}
.slogan h1 {
    display: inline-block;
    margin: 0;
    padding: 0;
    /*background-color: #fff;*/
    line-height: 1.25;
    text-shadow: 0 2px 2px rgba(0,0,0,.25);
}
.slogan .bigger {
    display: inline-block;
    padding: .15em .35em;
    font-size: 2em;
    background-color: rgba(204,51,0,.85);
}
.slogan .text-amiq {
    display: block;
    padding: .5em 0;
    border-bottom: 1px solid rgba(255,255,255,.75);
    font-size: .35em;
    font-weight: bold;
}

.slogan h2 {
    display: block;
    margin: 0;
    font-size: 1.25em;
    line-height: 1.25;
    text-shadow: 0 2px 2px rgba(0,0,0,.25);
}
.slogan .cheap {
    margin-top: .25em;
    margin-bottom: .5em;
    font-weight: bold;
}
/* ... */

